# marketmenow

./: .env.example  .gitignore  .pre-commit-config.yaml  .twitter_top_examples.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  setup.sh
.cursor/rules/: marketmenow.mdc  prompts.mdc  testing.mdc
projects/gradeasy/: generation_config.yaml  product.md  project.yaml
projects/gradeasy/campaigns/: reddit-launch.yaml  twitter-outreach.yaml
projects/gradeasy/personas/: default.yaml
projects/gradeasy/targets/: reddit.yaml  twitter.yaml
prompts/: prompt.md
prompts/email/: paraphrase.yaml
prompts/instagram/: autograde.yaml  generate_rubric.yaml
prompts/twitter/: thread_generation.yaml
src/adapters/: CLAUDE.md
src/adapters/email/: __init__.py  cli.py  paraphraser.py  sender.py  settings.py
src/adapters/facebook/: __init__.py  adapter.py  browser.py  cli.py  comment_generator.py  orchestrator.py  renderer.py  settings.py  uploader.py
src/adapters/instagram/: __init__.py  adapter.py  cli.py  settings.py  token_manager.py  uploader.py
src/adapters/linkedin/: __init__.py  adapter.py  api_adapter.py  api_client.py  browser.py  cli.py  content_generator.py  settings.py
src/adapters/reddit/: __init__.py  adapter.py  cli.py  client.py  comment_generator.py  discovery.py  orchestrator.py  post_generator.py  renderer.py  settings.py  uploader.py
src/adapters/tiktok/: adapter.py  browser.py  cli.py
src/adapters/twitter/: adapter.py  browser.py  cli.py  discovery.py  orchestrator.py  performance_tracker.py  reply_generator.py  settings.py  thread_generator.py
src/adapters/youtube/: __init__.py  adapter.py  cli.py  renderer.py  settings.py  uploader.py
src/marketmenow/: CLAUDE.md  cli.py  distribution_defaults.yaml  exceptions.py  registry.py
src/marketmenow/core/: campaign_cli.py  campaign_daemon.py  campaign_manager.py  campaign_planner.py  capsule.py  distribute_cli.py  distributor.py  embedding_store.py  icl.py  onboarding.py  orchestrator.py  pipeline.py  project_manager.py  project_templates.py  prompt_builder.py  registry_builder.py  scheduler.py  text_sanitiser.py  workflow.py  workflow_registry.py
src/marketmenow/integrations/: genai.py  langchain.py  llm.py  retry.py
src/marketmenow/models/: campaign.py  campaign_plan.py  content.py  distribution.py  project.py  result.py
src/marketmenow/outreach/: history.py  message_generator.py  models.py  outreach_comment_generator.py  ports.py  post_scorer.py  scorer.py
src/marketmenow/steps/: discover_posts.py  discover_prospects.py  discover_reddit_outreach.py  enrich_profiles.py  fetch_feedback.py  generate_carousel.py  generate_messages.py  generate_outreach_comments.py  generate_reddit_post.py  generate_reel.py  generate_thread.py  linkedin_post.py  package_capsule.py  post_from_capsule.py  post_outreach_comments.py  post_replies.py  post_to_platform.py  prepare_youtube.py  registry.py  repurpose_content.py  score_post_relevance.py  score_prospects.py  send_emails.py  send_messages.py  youtube_upload.py
src/marketmenow/workflows/: instagram_carousel.py  instagram_reel.py  post_capsule.py  reddit_outreach.py  reddit_story_reel.py  repurpose_capsule.py  tiktok_reel.py  twitter_outreach.py  twitter_thread.py  youtube_short_generate.py
src/web/: CLAUDE.md  app.py  cli_runner.py  config.py  db.py  deps.py  events.py  queue_worker.py
src/web/routes/: credentials.py  dashboard.py  flows.py  generate.py  outreach.py  project.py  (+3 more)
tests/: conftest.py  test_campaign_cli.py  test_campaign_daemon.py  test_campaign_manager.py  test_campaign_plan_model.py  test_campaign_planner.py  test_capsule.py  test_cli_project.py  test_content_generator_linkedin.py  test_discover_posts.py  test_distributor.py  test_email_sender.py  test_exceptions.py  test_facebook_engage.py  test_flows_routes.py  test_guideline_generator.py  test_icl.py  test_langchain_integration.py  test_llm_provider.py  test_llm_retry.py  test_models_campaign.py  test_models_content.py  test_models_distribution.py  test_models_result.py  test_normaliser.py  test_orchestrator.py  test_pipeline.py  test_project.py  test_project_templates.py  test_prompt_builder.py  test_prompt_resolution.py  test_reel_plan_generation.py  test_reels_models.py  test_reels_pipeline_steps.py  test_registry.py  test_renderer_instagram.py  test_renderer_linkedin.py  test_renderer_reddit.py  test_renderer_twitter.py  test_repurpose_content.py  (+11 more)
(+90 files in other folders)
